<resources>


    <string name="title_activity_cleaner">Cleaner</string>
    <string name="app_name">TransApp</string>
    <string name="title_activity_manager">ManagerActivity</string>

    <!-- manager main view strings -->
    <string name="manager_orders_text">Orders</string>
    <string name="manager_text_user">User:</string>

    <!-- warehouse worker view strings -->
    <string name="warehouse_worker_curr_order_text">Current Order</string>
    <string name="warehouse_worker_Item_To_delete">Item to delete:</string>

    <!-- tabs -->
    <string name="warehouse_tabs_Item">Item:</string>
    <string name="warehouse_tabs_hint_amount">Amount</string>
    <string name="warehouse_tabs_button_Add">Add</string>
    <string name="warehouse_tabs_Set_Details">Set Details:</string>
    <string name="warehouse_tabs__hint_Name">Name</string>
    <string name="warehouse_tabs__hint_Price">Price</string>
    <string name="warehouse_tabs__hint_Dimensions">Dimensions</string>
    <string name="warehouse_tabs__hint_Weight">Weight</string>
    <string name="warehouse_tabs__Item_Delete">Item to delete:</string>
    <string name="warehouse_tabs__button_delete">Delete</string>


    <string name="text_options">Options</string>
    <string name="orderHistory">Order History</string>

    <!-- Driver view strings -->
    <string name="car">Car:</string>

    <!-- Pop Up -->
    <string name="button_popup"> Set as DONE</string>


    <!-- login strings -->
    <string name="login_button">Login</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_sign_in_text">Login to your account</string>

    <!-- settings menu strings -->
    <string name="add_User">Add User</string>
    <string name="delete_User">Delete User</string>
    <string name="order_History">Order History</string>
    <string name="Logout">Log out</string>

    <!-- add and remove user View strings -->
    <string name="add_User_View">Add New User</string>
    <string name="add_User_View_Button">Add User</string>
    <string name="remove_User_View">Remove User</string>
    <string name="remove_User_View_Button">Remove User</string>

    <!-- schedule strings -->
    <string name="Schedule">Schedule</string>
    <string name="Monday">Monday:</string>
    <string name="Tuesday">Tuesday:</string>
    <string name="Wednesday">Wednesday:</string>
    <string name="Thursday">Thursday:</string>
    <string name="Friday">Friday:</string>

    <!-- manager add new order strings -->
    <string name="add_New_Order_Up">Add New Order</string>
    <string name="add_New_Order_Details">Details:</string>
    <string name="add_New_Order_Customer">Customer:</string>
    <string name="add_New_Order_Workers">Assign Workers:</string>
    <string name="add_New_Order_Warehouse">Warehouse Worker</string>
    <string name="add_New_Order_Driver">Driver</string>
    <string name="add_New_Order_Button_Add">Add</string>
    <string name="add_New_Order_Hint_Item">ItemIDs</string>
    <string name="add_New_Order_Description">Description</string>
    <string name="add_New_Order_Button_Deadline">Deadline</string>


    <string-array name="types">
        <item>Manager</item>
        <item>WarehouseWorker</item>
        <item>Driver</item>
    </string-array>
    <string name="title_activity_three_screen_menu">ThreeScreenMenu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_manager_schedule">activity_manager_schedule</string>
    <string name="title_activity_manager_tasks">activity_manager_tasks</string>
    <string name="title_activity_add_items">AddItemsActivity</string>
</resources>
