<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.kamil.transapp.LoginActivity">

    <TextView
        android:id="@+id/textID"
        android:layout_width="289dp"
        android:layout_height="32dp"
        android:text="@string/login_sign_in_text"
        android:textAlignment="center"
        android:textColor="#23b9ff"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <ImageView
        android:id="@+id/loading_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <ImageView
        android:id="@+id/loading_circle"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546"
        app:srcCompat="@drawable/circle" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        android:onClick="OnLogin"
        android:text="@string/login_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/loginText"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#23b9ff"
        android:ems="10"
        android:hint="@string/login_hint_username"
        android:inputType="textPersonName"
        android:text="admin"
        android:textColorLink="#23b9ff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textID"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#23b9ff"
        android:ems="10"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:text="admin"
        android:textColorLink="#23b9ff"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="337dp"
        android:layout_height="224dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/loading_circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo" />

</android.support.constraint.ConstraintLayout>
